--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/tarantulaaha/bra1nw0rk.com#readme",
   "dependencies": {
     "babel": "^6.23.0",
+    "devtool": "^2.3.1",
     "typeface-inter": "^3.12.0",
     "wowjs": "^1.1.3"
   },
